# featureclass

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: index.md  quickstart.md
featureclass/: __init__.py  cached_property.py  core.py
tests/: test_basic.py
