[tool.poetry]
name = "featureclass"
version = "0.1.0"
description = "Feature engineering library that helps you keep track of feature dependencies, documentation and schema"
authors = ["Itay Azolay <itayazolay@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Itayazolay/featureclass"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
