[tool.poetry]
name = "featureclass"
version = "0.2.1"
description = "Feature engineering library that helps you keep track of feature dependencies, documentation and schema"
authors = ["Itay Azolay <itayazolay@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Itayazolay/featureclass"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120

[tool.mypy]
show_error_codes = true
